force-app/main/default/objects/Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Team__c</field>
            <operation>equals</operation>
            <valueField>Employee__c.Sales_Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>